tests/fixtures/valid/native_hof_float_arg.lby
fn twice f fn(f64) -> f64 v f64 -> i64
    let a f64 = f(v)
    let b f64 = f(a)
    if b > 7.9
        return 1
    return 0

fn main -> i64
    let s f64 = 2.0
    let g fn(f64) -> f64 = fn x f64 -> x * s
    twice(g, 2.0)
